# lif-studio

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
docs/: ANALYSIS.md
lif_studio/: __init__.py  __main__.py  analysis.py  app.py  config.py  docs.py  exporter.py  lif_meta.py
lif_studio/ui/: __init__.py  analysis_page.py  charts.py  export_page.py  histogram.py  main_window.py  style.py  types_page.py  viewer_page.py  widgets.py  workers.py
packaging/: build_deb.sh  build_exe.bat  lif-studio.desktop  lif_studio.spec
